syntax = "proto3";

package common;
option go_package = "github.com/tonytangau/cloud-native-rand/protos/common";

message CategoryRequest {
  string category = 1;
}
